name:                obmapp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Xiyng/obmapp
license:             MIT
license-file:        LICENSE
author:              Xiyng
maintainer:          xiyng.dev@gmail.com
copyright:           2017 Xiyng
category:            Parser
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Obmapp.Beatmap
                     , Obmapp.Parser
                     , Obmapp.Parser.Osu
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite obmapp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , obmapp
                     , hspec
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Xiyng/obmapp
